# 20201CTpTaller

./: .depend  CMakeLists.txt  Configuration.json  ConfigurationClient.json  ConfigurationServer.json  README.md  game.cpp  game.h  main  main.cpp  modelo.txt
default/: ConfigurationClientDefault.json  ConfigurationDefault.json  ConfigurationServerDefault.json
providers/: GameProvider.h
services/: configurationHandler.h  logger.h
src/: main.cpp
src/assets/Stage/: InfoStages
src/client/: Client.cpp  Client.h  ClientTest.cpp  ClientTest.h  GameScreen.cpp  GameScreen.h
src/client/audio/: Audio.cpp  Audio.h  Music.cpp  Music.h
src/client/clientModels/: ClientMap.cpp  ClientMap.h  ClientMapElement.cpp  ClientMapElement.h
src/client/controllers/: ClientController.cpp  ClientController.h
src/client/eventsManager/: ClientEventsManager.cpp  ClientEventsManager.h
src/client/graphics/: GraphicsGeneral.cpp  GraphicsGeneral.h  GraphicsMapElement.cpp  GraphicsMapElement.h  GraphicsScenario.h
src/client/graphicsManager/: GraphicsMapElement.h  GraphicsScenario.h
src/client/loginMenu/: Button.cpp  Button.h  Menu.cpp  Menu.h  MenuElement.cpp  MenuElement.h  TextBox.cpp  TextBox.h
src/client/screenManager/: ScreenManager.cpp  ScreenManager.h
src/client/screenManager/graphics/: GameGraphics.cpp  GameGraphics.h  GraphicsMapElement.cpp  GraphicsMapElement.h  GraphicsMenu.cpp  GraphicsMenu.h  GraphicsScenario.cpp  GraphicsScenario.h  GraphicsScoreBoard.cpp  GraphicsScoreBoard.h
src/client/screenManager/loginMenu/: Button.cpp  Button.h  Menu.cpp  Menu.h  MenuElement.cpp  MenuElement.h  TextBox.cpp  TextBox.h
src/client/transmitionManager/: ClientTransmitionManager.cpp  ClientTransmitionManager.h
src/client/transmitionManager/serializer/: ClientDeserializer.cpp  ClientDeserializer.h  ClientSerializer.cpp  ClientSerializer.h
src/common/: types.h
src/common/events/: EventsQueue.cpp  EventsQueue.h
src/common/messages/: Message.cpp  Message.h  MessageActionPlayer.cpp  MessageActionPlayer.h  MessageInitEntity.cpp  MessageInitEntity.h  MessageInitLayer.cpp  MessageInitLayer.h  MessageInitScreen.cpp  MessageInitScreen.h  MessageLoginPlayer.cpp  MessageLoginPlayer.h  MessageMovementPlayer.cpp  MessageMovementPlayer.h  MessageRequestLoginPlayer.cpp  MessageRequestLoginPlayer.h  MessageUpdateEntity.cpp  MessageUpdateEntity.h  MessageUpdateStage.cpp  MessageUpdateStage.h
src/common/models/: Action.cpp  Action.h  BlockingMap.h  BlockingMapGraphicsMapElement.h  BlockingQueue.h  EnemyIA.h  Game.cpp  Game.h  Map.h  MapElement.cpp  MapElement.h  MovementHandler.h  PlayerController.h  Position.cpp  Semaphore.cpp  Semaphore.h  Socket.cpp  Socket.h  Sprite.cpp  Sprite.h  State.cpp
src/common/models/events/: Event.cpp  Event.h  EventAnimationInitStage.cpp  EventAnimationInitStage.h  EventBackgroundUpdate.cpp  EventBackgroundUpdate.h  EventEndGame.cpp  EventEndGame.h  EventEndStage.cpp  EventEndStage.h  EventGameInit.cpp  EventGameInit.h  EventGameOver.cpp  EventGameOver.h  EventInitStage.cpp  EventInitStage.h  EventMapElementCreate.cpp  EventMapElementCreate.h  EventMapElementDelete.cpp  EventMapElementDelete.h  EventMapElementUpdate.cpp  EventMapElementUpdate.h  EventMusicUpdate.cpp  EventMusicUpdate.h  EventPlayerDisconnect.cpp  EventPlayerDisconnect.h  EventPlayerReconnect.cpp  EventPlayerReconnect.h  EventQuantityPlayers.cpp  EventQuantityPlayers.h  EventRequestLoginPlayer.cpp  EventRequestLoginPlayer.h  EventResponseLoginPlayer.cpp  EventResponseLoginPlayer.h  EventSceneAnimation.cpp  EventSceneAnimation.h  EventScoreUpdate.cpp  EventScoreUpdate.h  EventSetLevel.cpp  EventSetLevel.h  (+10 more)
src/common/models/messages/: Message.cpp  Message.h  MessageActionPlayer.cpp  MessageAnimationInitStage.cpp  MessageAnimationInitStage.h  MessageBackgroundUpdate.cpp  MessageBackgroundUpdate.h  MessageEndGame.cpp  MessageEndGame.h  MessageEndStage.cpp  MessageEndStage.h  MessageGameInit.cpp  MessageGameInit.h  MessageGameOver.cpp  MessageGameOver.h  MessageInitEntity.cpp  MessageInitEntity.h  MessageInitScreen.h  MessageInitStage.cpp  MessageInitStage.h  MessageLog.cpp  (+38 more)
src/common/providers/: GameProvider.cpp  GameProvider.h
src/common/serializer/: MessageDeserializer.cpp  MessageDeserializer.h
src/common/services/: ConfigurationHandler.cpp  ConfigurationHandler.h  Logger.cpp  Logger.h  ParserJson.cpp  ParserJson.h  RandomGenerate.cpp  RandomGenerate.h  ThreadsHandler.cpp  ThreadsHandler.h
src/common/transmitionManager/: Socket.cpp  Socket.h
src/game/: Game.cpp  Game.h  main.cpp  types.h
src/game/graphics/: Graphics.cpp  Graphics.h  GraphicsMapElement.cpp  GraphicsMapElement.h  GraphicsScenario.cpp  GraphicsScenario.h  GraphicsSpacecraft.cpp  GraphicsSpacecraft.h
src/game/models/: Action.cpp  Action.h  EnemyIA.cpp  EnemyIA.h  Game.cpp  Game.h  Map.cpp  Map.h  MapElement.cpp  MapElement.h  MovementHandler.cpp  MovementHandler.h  Orientation.cpp  Orientation.h  PlayerController.cpp  PlayerController.h  Position.cpp  Position.h  Speed.cpp  Speed.h  Sprite.cpp  Sprite.h  Stage.cpp  Stage.h  State.cpp  State.h
src/providers/: GameProvider.cpp  GameProvider.h
src/server/: Server.cpp  Server.h
src/server/eventsManager/: ServerEventsManager.cpp  ServerEventsManager.h
src/server/models/: BossIA.cpp  BossIA.h  CollisionRectangle.cpp  CollisionRectangle.h  EnemyIA.cpp  EnemyIA.h  Game.cpp  Game.h  Map.cpp  Map.h  MapElement.cpp  MapElement.h  MapElementBackground.cpp  MapElementBackground.h  MovementHandler.cpp  MovementHandler.h  PlayerController.cpp  PlayerController.h  ProjectileIA.cpp  ProjectileIA.h  Speed.h  User.cpp  User.h
src/server/transmitionManager/: LogsManager.cpp  LogsManager.h  ServerTransmitionManager.cpp  ServerTransmitionManager.h
src/server/usersManager/: ConnectionsManager.cpp  ConnectionsManager.h  DisconnectionsManager.cpp  DisconnectionsManager.h  User.cpp  User.h  UsersManager.cpp  UsersManager.h
src/services/: ConfigurationHandler.cpp  ConfigurationHandler.h  Logger.cpp  Logger.h  ParserJson.cpp  ParserJson.h  SpriteGenerator.cpp  SpriteGenerator.h
(+27 files in other folders)
